--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd"><modelVersion>4.0.0</modelVersion>
     <groupId>dev.tylerm</groupId>
-    <artifactId>KenshinsHideAndSeekPlus</artifactId>
-    <version>1.7.6</version>
-    <name>Kenshins Hide And Seek Plus</name>
+    <artifactId>HideAndSeekPlus</artifactId>
+    <version>1.0.0</version>
+    <name>Hide And Seek Plus</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
