--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -203,6 +203,23 @@ glow:
   material: "SNOWBALL"
   model-data: 0
 
+# The Change Block item allows the Hider to change the Hiding Block while
+# the Game is running. You can disable this item with the enabled Option.
+# With the Name Option you can change the Item Name and with the lore option
+# you can change the Item lore.
+
+changeblock:
+  enabled: true
+  stackable: true
+  name: "Change Block"
+  lore: [
+    "Right click to",
+    "change your selected",
+    "Block"
+  ]
+  material: "GRASS_BLOCK"
+  model-data: 0
+
 # This has the same glow effect as the glow powerup in that all seekers positions get
 # shown to hiders. But enabling this force disables the powerup, and instead always shows
 # the seekers positions to the hiders. Good for small maps. Since the glow effect wasn't added
@@ -340,4 +357,6 @@ exit:
   x: 0
   y: 0
   z: 0
+  yaw: 0
+  pitch: 0
   world: "world"
